--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -3,18 +3,26 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  button {
-    margin: toRem(25px) 0;
-    padding: toRem(5px) toRem(25px);
-    &:hover {
-      cursor: pointer;
-      border: 2px solid $soft-red;
-      color: $soft-red;
-      font-weight: bold;
-    }
+  h1 {
+    margin-bottom: toRem(5px);
   }
-  input {
-    padding-left: toRem(5px);
+  form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    button {
+      margin: toRem(25px) 0;
+      padding: toRem(5px) toRem(25px);
+      &:hover {
+        cursor: pointer;
+        border: 2px solid $soft-red;
+        color: $soft-red;
+        font-weight: bold;
+      }
+    }
+    input {
+      padding-left: toRem(5px);
+    }
   }
   &__container {
     display: flex;
@@ -22,6 +30,10 @@
     justify-content: center;
     max-width: toRem($big);
     gap: toRem(20px);
+    &__not-exist {
+      font-weight: bold;
+      color: $soft-red;
+    }
     &__content {
       border: 4px dashed $soft-red;
       width: toRem($small);
@@ -32,7 +44,7 @@
         text-align: center;
         margin: 0 10px;
       }
-      @media(max-width: toRem(372px)) {
+      @media (max-width: toRem(372px)) {
         width: toRem(200px);
       }
     }
