Change colors and improve design

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,7 +1,8 @@
 // colors
-$light-yellow:#fee7c6;
+$light-yellow: #fcf48c;
 $transparent-white: #f0f8ffe2;
-$soft-red: #d43a14;
+$soft-red: #CF1020;
+$green: #06A77D;
 
 //max-width, width, height
 $big: 800px;
