Add skeleton loader

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,6 +3,8 @@ $light-yellow: #fcf48c;
 $transparent-white: #f0f8ffe2;
 $soft-red: #CF1020;
 $green: #06A77D;
+$white: #ffffff;
+$grey: #f0f0f0;
 
 //max-width, width, height
 $big: 800px;
