Implement react-router, create Home and MovieDetail

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,8 @@
 @import "reset";
 @import "variables";
 @import "functions";
-@import "App";
+@import 'buttons';
+@import "Home";
 @import 'SkeletonLoader';
 @import 'Dropdown';
 
